--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.socialsla</groupId>
-	<artifactId>SocialSLA-NLP-WEKA-JPA</artifactId>
+	<artifactId>SocialSLA-WEKA-JPA</artifactId>
 	<version>0.0.1</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -29,5 +29,19 @@
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 			<version>1.0.0.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j13</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1.0-PFD-1</version>
+		</dependency>
 	</dependencies>
+	<description>
+		</description>
 </project>
