--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
-			<version>1.0-PFD-1</version>
+			<groupId>org.jboss.weld</groupId>
+			<artifactId>weld-core</artifactId>
+			<version>1.1.1.Final</version>
 		</dependency>
 	</dependencies>
 	<description>
