--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
 			<artifactId>weka-dev</artifactId>
 			<version>3.7.5</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
@@ -32,15 +31,16 @@
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j13</artifactId>
-			<version>1.0.1</version>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.5.10</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.jboss.weld</groupId>
-			<artifactId>weld-core</artifactId>
-			<version>1.1.1.Final</version>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1.0-PFD-1</version>
 		</dependency>
+
 	</dependencies>
 	<description>
 		</description>
