--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
 			<version>1.0-PFD-1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.0</version>
+		</dependency>
+
 	</dependencies>
 	<description>
 What makes me want to develop this project:
