--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.socialsla</groupId>
 	<artifactId>SocialSLA-WEKA-JPA</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.4</version>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -59,6 +59,11 @@
 			<version>4.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>br.com.socialsla</groupId>
+			<artifactId>CDI-Utils</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 	</dependencies>
 	<description>
 What makes me want to develop this project:
